--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -7,6 +7,7 @@ html, body {
 
 body {
     display: flex;
+    flex-direction: column;
     outline: 2px solid blue;
     font-family: 'Roboto';
     
@@ -17,23 +18,57 @@ body {
     background: #1f2937;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    padding: 0 16px;
+    justify-content: space-between;
     width: 100%;
-
+    padding: 0 128px;
+    box-sizing: border-box;
 
 
 }
+
+
 .logo {
     color: #F9FAF8;
     font-size: 24px;
-    margin-left: 128px;
+
 }
 
 .links {
     display: flex;
-    margin-left: auto;
-    margin-right: 128px;
+
+}
+.main-container {
+    background: #1f2937;
+    display: flex;
+    padding-left: 128px;
+    padding-right: 128px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+.hero {
+    display: flex;
+    flex: 1;
+    max-width: 400px;
+    font-size: 48px;
+    color: #F9FAF8;
+}
+
+.secondary {
+    max-width: 400px;
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.button {
+    border-radius: 50px;
+    color: #3882f6;
 }
 
 li {
@@ -51,4 +86,10 @@ a {
     text-decoration: none;
     color: #E5E7EB;
     font-size: 18px;
+}
+
+img {
+    display: flex;
+    max-width: 400px;
+    max-height: 200px;
 }
