--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -8,7 +8,6 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-    outline: 2px solid blue;
     font-family: 'Roboto';
     
 }
@@ -44,20 +43,23 @@ body {
     padding-right: 128px;
     padding-top: 100px;
     padding-bottom: 100px;
+    justify-content: space-between;
 }
 
 .main {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 16px;
 
 }
 .hero {
     display: flex;
-    flex: 1;
+    flex: 1 1 auto;
     max-width: 400px;
     font-size: 48px;
     color: #F9FAF8;
+    margin: 0;
 }
 
 .secondary {
@@ -65,10 +67,27 @@ body {
     color: #E5E7EB;
     font-size: 18px;
 }
-
-.button {
-    border-radius: 50px;
-    color: #3882f6;
+.second-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+}
+.small-images{
+    display: flex;
+    padding-top: 20px;
+    gap: 25px;
+}
+button {
+    border-radius: 5px;
+    border-color: #3882f6;
+    background-color: #3882f6;
+    border-style: solid;
+    color: #E5E7EB;
+    font-weight: bold;
+    height: 30px;
+    width: 100px;
 }
 
 li {
@@ -88,8 +107,21 @@ a {
     font-size: 18px;
 }
 
-img {
+#main-img {
     display: flex;
+    flex: 1 1 auto;
     max-width: 400px;
+    max-height: 250px;
+    height: auto;
+    width: auto;
+}
+
+#secondary-images {
+    display: flex;
+    flex: 1 1 auto;
+    max-width: 200px;
     max-height: 200px;
+    height: auto;
+    width: auto;
+    border-radius: 5px;
 }
