--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -67,18 +67,37 @@ body {
     color: #E5E7EB;
     font-size: 18px;
 }
-.second-section {
+.information {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 50px;
+    font-size: 38px;
+    color: #1f2937; 
+    font-weight: 900;
 }
-.small-images{
+.image-container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    max-width: 200px;
+    margin-top: 25px;
+}
+
+.small-images {
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+}
+
+.subtext {
+    max-width: 225px;
     padding-top: 20px;
     gap: 25px;
 }
+
 button {
     border-radius: 5px;
     border-color: #3882f6;
@@ -116,12 +135,13 @@ a {
     width: auto;
 }
 
-#secondary-images {
-    display: flex;
-    flex: 1 1 auto;
+.secondary-images {
     max-width: 200px;
     max-height: 200px;
-    height: auto;
-    width: auto;
     border-radius: 5px;
+}
+.subtext {
+    text-align: center; /* Centers the text under each image */
+    font-size: 14px; /* Adjust font size as needed */
+
 }
