--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -98,7 +98,55 @@ body {
     gap: 25px;
 }
 
-button {
+.quote-section {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+    padding-left: 128px;
+    padding-right: 128px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.quote {
+    max-width: 820px;
+    text-align:left;
+    text-wrap: wrap;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1f2937;
+}
+
+.author {
+    width: 600px;
+    text-align: right;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.action-section {
+    padding-left: 128px;
+    padding-right: 128px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+}
+.action-container {
+    max-width: 850px;
+    display: flex;
+    padding: 30px 50px;
+    justify-content: space-between;
+    background-color: #3882f6;
+    color: #E5E7EB;
+    border-radius: 5px;
+}
+
+
+
+.main-button {
     border-radius: 5px;
     border-color: #3882f6;
     background-color: #3882f6;
@@ -107,6 +155,27 @@ button {
     font-weight: bold;
     height: 30px;
     width: 100px;
+}
+
+.action-button {
+    border-radius: 5px;
+    border-color: #E5E7EB;;
+    background-color: #3882f6;
+    border-style: solid;
+    color: #E5E7EB;
+    font-weight: bold;
+    height: 30px;
+    width: 100px;
+
+}
+
+footer {
+    padding: 30px;
+    background-color: #1f2937;
+    color: #E5E7EB;
+    text-align: center;
+    font-size: small;
+    font-weight: lighter;
 }
 
 li {
